--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,16 @@ nav h3 {
     margin-bottom: -1px;
 }
 
-nav h3:hover {
+nav h3 button {
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
+    font-size: 1em;
+}
+
+nav h3:hover,
+nav h3 button:hover {
     background-color: var(--filter-bg-color);
     cursor: pointer;
 }
