--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,6 @@ nav {
 nav h3 {
     border: 2px solid var(--filter-bg-color);
     border-radius: 25px 25px 0px 0px;
-    padding: 10px;
     margin-bottom: -1px;
 }
 
@@ -46,6 +45,8 @@ nav h3 button {
     font-family: 'Raleway', sans-serif;
     font-weight: bold;
     font-size: 1em;
+    padding: 15px 25px 15px 25px;
+    border-radius: 25px 25px 0px 0px;
 }
 
 nav h3:hover,
@@ -67,10 +68,24 @@ table {
     margin: auto;
 }
 
+caption {
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
 tr, 
 th, 
 td {
     border: 1px dashed silver;
+}
+
+.col1,
+.col4 {
+    width: 15%;
+}
+
+.col2 {
+    width: 35%;
 }
 
 /******** footer ******/
@@ -84,8 +99,31 @@ footer {
 
 footer h4 {
     margin: 5px;
+    font-size: 1.15em;
+    padding-right: 13px;
+    text-decoration: underline;
+}
+
+footer h4 label:hover,
+.fa-hand-point-right:hover {
+    cursor: pointer;
+}
+
+.invisible {
+    display: none;
 }
 
 footer ul {
     margin: 5px;
+    display: none;
+}
+
+footer li {
+    list-style-type: none;
+}
+
+.menu-footer:checked + ul {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
 }
