feat: add form for add data in db

--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,14 @@ td {
     width: 35%;
 }
 
+td input {
+    width: 95%;
+}
+
+.btn-ajout {
+    width: 100%;
+}
+
 /******** footer ******/
 
 footer {
